<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/app_name" />

        <!-- Judul -->
        <TextView
            android:id="@+id/tv_register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/green_primary"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp" />

        <!-- Nama -->
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:hint="@string/hint_name"
            android:background="@color/gray_dark"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp" />

        <!-- Email -->
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:hint="@string/hint_email"
            android:background="@color/gray_dark"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp" />

        <!-- Password -->
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:background="@color/gray_dark"
            android:layout_marginBottom="24dp" />

        <!-- Tombol Register -->
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:backgroundTint="@color/green_primary"
            android:textColor="@android:color/white" />

        <!-- Link ke Login -->
        <TextView
            android:id="@+id/tv_login_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:textColor="@color/green_primary"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</ScrollView>
