<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tv_forgot_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/green_primary"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp" />

        <!-- Email -->
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:background="@color/gray_dark"
            android:layout_marginBottom="16dp"/>

        <!-- Tombol Kirim Reset -->
        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_reset_password"
            android:backgroundTint="@color/green_primary"
            android:textColor="@android:color/white" />

        <!-- Link Kembali -->
        <TextView
            android:id="@+id/tv_back_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login"
            android:textColor="@color/green_primary"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</ScrollView>
