<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Banner -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:src="@drawable/banner"
            android:contentDescription="Banner" />

        <!-- Grid Menu -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:layout_marginTop="24dp"
            android:rowCount="2">

            <!-- Item Menu (reusable style) -->
            <!-- Komunitas -->
            <LinearLayout
                android:id="@+id/btnKomunitas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_margin="8dp"
                android:gravity="center"
                android:contentDescription="@string/menu_community" >

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="@drawable/bg_circle_green"
                    android:padding="10dp"
                    android:src="@drawable/ic_komunitas"
                    android:contentDescription="@string/menu_community" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_community"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:gravity="center" />
            </LinearLayout>

            <!-- Edukasi -->
            <LinearLayout
                android:id="@+id/btnEdukasi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_margin="8dp"
                android:gravity="center"
                android:contentDescription="@string/menu_education">

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="@drawable/bg_circle_green"
                    android:padding="10dp"
                    android:src="@drawable/ic_edukasi"
                    android:contentDescription="@string/menu_education" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_education"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:gravity="center" />
            </LinearLayout>

            <!-- Kalender -->
            <LinearLayout
                android:id="@+id/btnKalender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_margin="8dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="@drawable/bg_circle_green"
                    android:padding="10dp"
                    android:src="@drawable/ic_kalender"
                    android:contentDescription="@string/menu_calendar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_calendar"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:gravity="center" />
            </LinearLayout>

            <!-- Cek Tanaman -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_margin="8dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="@drawable/bg_circle_green"
                    android:padding="10dp"
                    android:src="@drawable/ic_cek_tanaman"
                    android:contentDescription="@string/menu_check" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_check"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:gravity="center" />
            </LinearLayout>

            <!-- Marketplace -->
            <LinearLayout
                android:id="@+id/btnPasar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_margin="8dp"
                android:gravity="center"
                android:contentDescription="@string/menu_marketplace">

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="@drawable/bg_circle_green"
                    android:padding="10dp"
                    android:src="@drawable/ic_marketplace"
                    android:contentDescription="@string/menu_marketplace" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_marketplace"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:gravity="center" />
            </LinearLayout>

            <!-- Rapor -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_margin="8dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="@drawable/bg_circle_green"
                    android:padding="10dp"
                    android:src="@drawable/ic_rapor"
                    android:contentDescription="@string/menu_report" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_report"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:gravity="center" />
            </LinearLayout>
        </GridLayout>

        <!-- Edukasi & Tips -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edukasi_tips"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="12dp"
            card_view:cardElevation="6dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/gray_dark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tips_title"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tips_desc"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="4dp"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_farmer"
                    android:contentDescription="Ilustrasi edukasi" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:src="@android:drawable/ic_media_next"
                    android:contentDescription="Lanjut"
                    card_view:tint="@color/gray_dark" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Promo Produk -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/promo_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                card_view:cardCornerRadius="12dp"
                card_view:cardElevation="4dp"
                android:backgroundTint="@color/gray_dark">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/promo_1"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:paddingEnd="8dp" />

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:src="@drawable/ic_pupuk"
                        android:contentDescription="pupuk" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                card_view:cardCornerRadius="12dp"
                card_view:cardElevation="4dp"
                android:backgroundTint="@color/gray_dark">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/promo_2"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:paddingEnd="8dp" />

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:src="@drawable/ic_semangka"
                        android:contentDescription="semangka" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
